# minibin

./: .gitignore  Cargo.toml  README.md  app.rc
src/: app.rs  conf.rs  icon.rs  lib.rs  main.rs  trash.rs
